# kokrotimg

./: .gitignore  BUILDING.cygwin.md  CMakeLists.txt  README.md
cmake/: FindFreeImage.cmake  GResource.cmake
src/kokrotimg/: CMakeLists.txt  common.c  common.h  config.h  debug.h  instrumentation-posix.c  kokrotimg.c  kokrotimg.h  macrocosm.c  macrocosm.h  microcosm.c  microcosm.h
src/kokrotviz/: CMakeLists.txt  controlWindow.cc  controlWindow.h  delegate.h  eventSource.h  exceptions.h  kokrotImgDriver.cc  kokrotImgDriver.h  layerManager.cc  layerManager.h  layerTreeView.cc  layerTreeView.h  main.cc  messageTreeView.cc  messageTreeView.h  metricsTreeView.cc  metricsTreeView.h  utils.cc  utils.h  visualizationWindow.cc  visualizationWindow.h
src/kokrotviz/ui/: kokrotviz.glade  kokrotviz.gresource.xml
